fix: align header menu icon with logo and theme toggle

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -206,11 +206,16 @@ main {
 		align-items: center;
 	}
 	span#menu-icon {
-		display: block;
-		margin: 1rem 1rem 0 0;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 36px;
+		height: 36px;
+		margin: 1em 1rem 0 0;
 		color: rgb(188, 119, 0);
 		cursor: pointer;
-		font-size: 1.5rem;
+		font-size: 1.1rem;
+		line-height: 1;
 	}
 	nav#menu {
 		max-height: 0;
